refactor: DTO 클래스를 Java Record로 전환
closes #6