@@ -1,34 +1,26 @@
 package com.knupbackend.quiz.dto.response;
 
 import com.knupbackend.quiz.domain.Quiz;
-import lombok.Builder;
-import lombok.Getter;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Getter
-@Builder
-public class QuizDetailResponse {
-
-    private Long id;
-    private String title;
-    private String description;
-    private List<QuestionResponse> questions;
-    private LocalDateTime createdAt;
-    private LocalDateTime updatedAt;
-
+public record QuizDetailResponse(
+        Long id,
+        String title,
+        String description,
+        List<QuestionResponse> questions,
+        LocalDateTime createdAt,
+        LocalDateTime updatedAt
+) {
     public static QuizDetailResponse from(Quiz quiz) {
-        return QuizDetailResponse.builder()
-                .id(quiz.getId())
-                .title(quiz.getTitle())
-                .description(quiz.getDescription())
-                .questions(quiz.getQuestions().stream()
-                        .map(QuestionResponse::from)
-                        .collect(Collectors.toList()))
-                .createdAt(quiz.getCreatedAt())
-                .updatedAt(quiz.getUpdatedAt())
-                .build();
+        return new QuizDetailResponse(
+                quiz.getId(),
+                quiz.getTitle(),
+                quiz.getDescription(),
+                quiz.getQuestions().stream().map(QuestionResponse::from).toList(),
+                quiz.getCreatedAt(),
+                quiz.getUpdatedAt()
+        );
     }
 }
